<resources>
    <string name="app_name">Rhino Real Estates </string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nextBtn" translatable="false">Next</string>
    <string name="SkipBtn" translatable="false">Skip</string>
    <string name="hint" translatable="false">hint</string>
    <string name="loginTxt" translatable="false">Login</string>
    <string name="PasswordTxt">Password</string>
    <string name="UsernameTxt">Username</string>
    <string name="EmailTxt" translatable="false">Email</string>
    <string name="PhoneTxt">Phone</string>
    <string name="create_accountBtn">Create Account</string>
    <string name="DescGuide">Come to us for the keys, and live a life with ease</string>
    <string name="TitleGuide">Welcome to Rhino Estate</string>
    <string name="registerTV">Create account!</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="addTxt">Add</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="category">Categories</string>
    <string name="salade">Our salads</string>
    <string name="expertRecette">Recipes from the experts</string>

    <string name="ingredients">Ingredients and mesures</string>
    <string name="instructions">Instructions</string>
    <string name="longLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc diam augue, vestibulum bibendum faucibus id, imperdiet id diam. Nullam ex lorem, placerat in sem vel, ullamcorper consectetur lacus. Curabitur sodales urna nibh, sit amet iaculis ante dapibus vitae. Suspendisse et tortor at sem maximus consectetur a id nunc.</string>

    <string name="modifier">update</string>
    <string name="title_activity_ingredients">ingredients_Activity</string>
    <string name="BASE_URL">http://10.0.2.2:3000/api/</string>

    <string name="action_settings">Settings</string>
    <string name="hello_food_fragment" translatable="false">hello food fragment</string>
    <string name="hello_blog_frag" translatable="false">hello blog frag</string>
    <string name="hello_profile_fragment" translatable="false">Hello profile fragment</string>
    <string name="updateBTN">update Profile</string>
    <string name="authorusername" translatable="false">AuthorUsername</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="ingredient_name" translatable="false">IngredientName</string>
    <string name="loading_text">Loading…</string>
    <string name="password_holder" translatable="false">*************</string>
    <string name="phone_value" translatable="false">phoneValue</string>
    <string name="search">Search</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="food_toobar_title">Food list</string>
    <string name="food_recipe">Food Recipe</string>

    <string name="upvote_number">50</string>


    <string name="commentTitleEdit">Comments</string>

    <string name="my_recipe">My Recipes</string>
    <string name="recetteFormTitle">Add a recipe</string>
    <string name="recetteFormEditTitle">Edit Recipe</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>


    <string name="MeasureTxt">Mesure</string>

    <string name="measures">Measures</string>
    <string name="meals_category_filter">Meals by category</string>
    <string name="profileimage" translatable="false">profileImage</string>
    <string name="greetings">Greetings</string>
    <string name="quote">Don\'t forget to drink water!</string>

    <string name="rate_our_app">Rate Our App</string>

    <string name="mes_recettes">My recipes</string>
    <string name="healthy_mode">Healthy Mode</string>
    <string name="send_feedback">Send feedback</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>

    <string name="no_recipes_found">No recipes found</string>
    <string name="ingredients_basket">Ingredients basket</string>
    <string name="clear_cart" translatable="false">clear</string>
    <string name="search_food">Search food</string>
    <string name="store_preferences">Store preferences</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="community_space">Community space</string>
    <string name="dev_newsletter">Dev. newsletter</string>
    <string name="read_documentation">Read documentation</string>
    <string name="edit_profile">Account settings</string>
    <string name="logout">Logout</string>
    <string name="user_preferences">User preferences</string>
    <string name="RepeatPasswordTxt" translatable="false">Repeat Password</string>
    <string name="rechercheTxt">Search</string>
    <string name="ojja">Ojja with eggs</string>
    <string name="reccete_type">Generated recipe</string>
    <string name="ajoutRecette">Add a recipe</string>
    <string name="titreRecetteInput">Recipe title</string>
    <string name="dureeRecetteInput">Recipe duration</string>
    <string name="personRecetteInput">Number of people</string>
    <string name="difficultyRecetteInput">Difficulty of the recipe</string>
    <string name="bioRecetteInput">Is your recipe organic?</string>
    <string name="descRecetteInput">Please specify the instructions of your recipe</string>
    <string name="ajouter">Add</string>
    <string name="comment">Comment</string>
    <string name="commentTitle">Leave a Comment</string>
    <string name="blog_title">User Recipes</string>
    <string name="recomnandedRecette">Recipes from Users</string>
    <string name="accueilTxt">Feed</string>
    <string name="about" translatable="false">About</string>
    <string name="about_description" translatable="false">Easy Kitchen is a smartphone application that prevents you from being hungry</string>
    <string name="dateComment">10</string>
    <string name="veganRecette">Vegan recipe</string>
    <string name="hello">"Hello, "</string>
    <string name="no_ingredients_found">No Ingredients found</string>
    <string name="no_ingredients_in_basket">No ingredients in basket</string>


</resources>